# QOL-Scripts

./: .gitignore  Makefile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: main.yml
src/: __init__.py  app.py  brightness.py  focus_monitor.py  main.py  main.spec  resolution.py  settings.py  settings_window.py  vibrance.py
src/cs2/: __init__.py  auto_accept.py  console_watcher.py
src/hooks/: hook-pywin32.py
src/lol/: __init__.py  auto_accept.py  auto_pick.py  connector_base.py  lcu_api.py  shared_connector.py
