[project]
name = "QOL-Scripts"
version = "1.5.0"
description = "Quality of Life scripts for Windows"
requires-python = ">=3.11"
dependencies = [
    "screen-brightness-control~=0.24.0",
    "pywin32>=311; platform_system == 'Windows'",
    "pystray~=0.19.0",
    "pillow~=12.0.0",
    "appdirs~=1.4.0",
    "sv-ttk~=2.6.0",
    "darkdetect~=0.8.0",
    "pywinstyles~=1.8",
    "winshell~=0.6",
    "lcu-driver~=3.0.0",
    "requests~=2.32.0",
    "win32-window-monitor~=0.3.3",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",  # Module level import not at top — intentional in main.py and app.py
]

[project.optional-dependencies]
dev = [
    "ruff",
    "vulture",
]

[tool.vulture]
paths = ["src"]
min_confidence = 100  # only show definite unused code (callbacks/decorators are false positives at 60%)

[tool.pyinstaller]
# Configuration reference for PyInstaller (actual build uses main.spec)
script = "src/main.py"
